syntax = "proto3";
package spec;


message JsonNamesMessage {

    string scalar_field = 1 [json_name = "scalarFieldJsonName"];
    repeated string repeated_scalar_field = 2 [json_name = "repeatedScalarFieldJsonName"];

    string a = 3 [json_name = "sameJsonName"];
    string b = 4 [json_name = "sameJsonName"];
    string c = 5;
    string d = 6 [json_name = "c"];
    string e = 7 [json_name = ""];

}
